--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,16 @@
 app:
+  port: ${APP_PORT:8080}
+  logging: debug
   server: 10.147.20.20:3306
   database: fiadm
   user: root
   password: root
-  add-properties: true
-  logging: debug
-  livereload:
-    enabled: true
-    port: 35801
-  open-in-view: true
   mail:
     username: envios@um.edu.ar
     password: 4Siby2KPwWIStCyX9gLB
+
+server:
+  port: ${app.port}
   
 spring:
   datasource:
@@ -21,14 +20,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
-    open-in-view: ${app.open-in-view}
     hibernate:
       ddl-auto: none
-  devtools:
-    livereload:
-      enabled: ${app.livereload.enabled}
-      port: ${app.livereload.port}
-    add-properties: ${app.add-properties}
   mail:
     host: smtp.gmail.com
     port: 587
