refactor(di): implementar inyección por constructor y mejoras de código
- Reemplazado @Autowired por inyección por constructor en: * InscripcionController * FormularioController * InscripcionService * MailService

- Agregado final a campos de servicios

- Implementado manejo de excepciones en InscripcionController

- Optimizado código y eliminadas redundancias

- Removidas credenciales hardcodeadas

Testing: ✓ Verificada funcionalidad de endpoints ✓ Validado manejo de excepciones ✓ Comprobado envío de correos ✓ Probada integración con servicios

Closes #24

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ app:
   user: root
   password: root
   mail:
-    username: envios@um.edu.ar
-    password: 4Siby2KPwWIStCyX9gLB
+    username: uid
+    password: pwd
 
 server:
   port: ${app.port}
