--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,17 @@ app:
   mail:
     username: uid
     password: pwd
+  swagger_user: admin
+  swagger_password: password
 
 server:
   port: ${app.port}
   
 spring:
+  security:
+    user:
+      name: ${app.swagger_user}
+      password: ${app.swagger_password}
   datasource:
     url: jdbc:mysql://${app.server}/${app.database}?useSSL=false&serverTimezone=UTC
     username: ${app.user}
